components/syncthing/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing-websecure
  labels:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: syncthing
  annotations:
    gethomepage.dev/href: "https://syncthing.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: syncthing.png
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncthing.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: syncthing
          port: http
  tls:
    certResolver: letsencrypt
